--- a/ContatosServices/ContatosServices.csproj
+++ b/ContatosServices/ContatosServices.csproj
@@ -183,7 +183,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ApiAuthorizeAttribute.cs" />
+    <Compile Include="Controllers\AutenticacaoHelper.cs" />
+    <Compile Include="Controllers\Constantes.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PessoaApiController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
